--- a/distilbert/distilber-model/distilbert_email_classification.ipynb
+++ b/distilbert/distilber-model/distilbert_email_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36da4782",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
    ],
    "source": [
     "# ===================== COMPLETE DISTILBERT-BASED ATS EMAIL CLASSIFIER =====================\n",
-    "#  Small Model | Resume Training | No Optimizer Bloat\n",
+    "# Copy–Paste Ready | Small Model | Resume Training | No Optimizer Bloat\n",
     "# ========================================================================================\n",
     "\n",
     "# ---------- STEP 0: IMPORT LIBRARIES ----------\n",
